objects/JBCXM__UserAdoption__c.object
<CustomObject>
    <description>Adoption object is used to store all the data related to User and/or Product Adoption.</description>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <description>Maps to a customer (Account) that the record belongs to.</description>
        <inlineHelpText>Customer name</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Adoption</relationshipLabel>
        <relationshipName>UserAdoption</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <description>Date against which Adoption Data is loaded.</description>
        <inlineHelpText>Date against which Adoption Data is loaded.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__MeasureID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adoption Measure against which the data is loaded. Adoption measures can be added to the PickList object and/or existing measures renamed.</description>
        <inlineHelpText>Adoption Measure against which the data is loaded.</inlineHelpText>
        <label>Measure Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>JBCXM__PickList__c.JBCXM__Category__c</field>
                <operation>equals</operation>
                <value>Adoption Measure Types</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>User Adoption</relationshipLabel>
        <relationshipName>UserAdoption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__MeasureValue__c</fullName>
        <description>Value for the Adoption Measure.</description>
        <inlineHelpText>Value for the Adoption Measure.</inlineHelpText>
        <label>Measure Value</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Month__c</fullName>
        <formula>MONTH(JBCXM__Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a look up to opportunity.Used this field to populate adoption by opportunity</description>
        <inlineHelpText>Select opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>User Adoption</relationshipLabel>
        <relationshipName>User_Adoption</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Period01__c</fullName>
        <formula>IF(MONTH(JBCXM__Date__c) == 1 , JBCXM__MeasureValue__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Period02__c</fullName>
        <formula>IF(MONTH(JBCXM__Date__c) == 2 , JBCXM__MeasureValue__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Period03__c</fullName>
        <formula>IF(MONTH(JBCXM__Date__c) == 3 , JBCXM__MeasureValue__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Year__c</fullName>
        <formula>YEAR(JBCXM__Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>User Adoption</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>JBCXM__Account__c</columns>
        <columns>JBCXM__Date__c</columns>
        <columns>JBCXM__MeasureID__c</columns>
        <columns>JBCXM__MeasureValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JBCXM__Year__c</field>
            <operation>equals</operation>
            <value>2011</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JBCXM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>UserAdoptionName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Adoption</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>